third_party/blink/web_tests/external/wpt/payment-request/idlharness.https.window-expected.txt
This is a testharness.js-based test.
Found 78 tests; 76 PASS, 2 FAIL, 0 TIMEOUT, 0 NOTRUN.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS PaymentRequest interface: existence and properties of interface object
PASS PaymentRequest interface object length
PASS PaymentRequest interface object name
PASS PaymentRequest interface: existence and properties of interface prototype object
PASS PaymentRequest interface: existence and properties of interface prototype object's "constructor" property
PASS PaymentRequest interface: existence and properties of interface prototype object's @@unscopables property
PASS PaymentRequest interface: operation show([object Object])
PASS PaymentRequest interface: operation abort()
PASS PaymentRequest interface: operation canMakePayment()
PASS PaymentRequest interface: operation hasEnrolledInstrument()
PASS PaymentRequest interface: attribute id
PASS PaymentRequest interface: attribute shippingAddress
PASS PaymentRequest interface: attribute shippingOption
PASS PaymentRequest interface: attribute shippingType
FAIL PaymentRequest interface: attribute onmerchantvalidation assert_true: The prototype object must have a property "onmerchantvalidation" expected true got false
PASS PaymentRequest interface: attribute onshippingaddresschange
PASS PaymentRequest interface: attribute onshippingoptionchange
PASS PaymentRequest interface: attribute onpaymentmethodchange
PASS PaymentAddress interface: existence and properties of interface object
PASS PaymentAddress interface object length
PASS PaymentAddress interface object name
PASS PaymentAddress interface: existence and properties of interface prototype object
PASS PaymentAddress interface: existence and properties of interface prototype object's "constructor" property
PASS PaymentAddress interface: existence and properties of interface prototype object's @@unscopables property
PASS PaymentAddress interface: operation toJSON()
PASS PaymentAddress interface: attribute city
PASS PaymentAddress interface: attribute country
PASS PaymentAddress interface: attribute dependentLocality
PASS PaymentAddress interface: attribute organization
PASS PaymentAddress interface: attribute phone
PASS PaymentAddress interface: attribute postalCode
PASS PaymentAddress interface: attribute recipient
PASS PaymentAddress interface: attribute region
PASS PaymentAddress interface: attribute sortingCode
PASS PaymentAddress interface: attribute addressLine
PASS PaymentResponse interface: existence and properties of interface object
PASS PaymentResponse interface object length
PASS PaymentResponse interface object name
PASS PaymentResponse interface: existence and properties of interface prototype object
PASS PaymentResponse interface: existence and properties of interface prototype object's "constructor" property
PASS PaymentResponse interface: existence and properties of interface prototype object's @@unscopables property
PASS PaymentResponse interface: operation toJSON()
PASS PaymentResponse interface: attribute requestId
PASS PaymentResponse interface: attribute methodName
PASS PaymentResponse interface: attribute details
PASS PaymentResponse interface: attribute shippingAddress
PASS PaymentResponse interface: attribute shippingOption
PASS PaymentResponse interface: attribute payerName
PASS PaymentResponse interface: attribute payerEmail
PASS PaymentResponse interface: attribute payerPhone
PASS PaymentResponse interface: operation complete(PaymentComplete)
PASS PaymentResponse interface: operation retry(PaymentValidationErrors)
PASS PaymentResponse interface: attribute onpayerdetailchange
PASS MerchantValidationEvent interface: existence and properties of interface object
PASS MerchantValidationEvent interface object length
PASS MerchantValidationEvent interface object name
PASS MerchantValidationEvent interface: existence and properties of interface prototype object
PASS MerchantValidationEvent interface: existence and properties of interface prototype object's "constructor" property
PASS MerchantValidationEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS MerchantValidationEvent interface: attribute methodName
PASS MerchantValidationEvent interface: attribute validationURL
PASS MerchantValidationEvent interface: operation complete([object Object])
PASS PaymentMethodChangeEvent interface: existence and properties of interface object
PASS PaymentMethodChangeEvent interface object length
PASS PaymentMethodChangeEvent interface object name
PASS PaymentMethodChangeEvent interface: existence and properties of interface prototype object
PASS PaymentMethodChangeEvent interface: existence and properties of interface prototype object's "constructor" property
PASS PaymentMethodChangeEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS PaymentMethodChangeEvent interface: attribute methodName
PASS PaymentMethodChangeEvent interface: attribute methodDetails
PASS PaymentRequestUpdateEvent interface: existence and properties of interface object
PASS PaymentRequestUpdateEvent interface object length
PASS PaymentRequestUpdateEvent interface object name
PASS PaymentRequestUpdateEvent interface: existence and properties of interface prototype object
PASS PaymentRequestUpdateEvent interface: existence and properties of interface prototype object's "constructor" property
PASS PaymentRequestUpdateEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS PaymentRequestUpdateEvent interface: operation updateWith([object Object])
Harness: the test ran to completion.

